--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/EnonceCompetence/Info.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/EnonceCompetence/Info.cshtml
@@ -4,62 +4,59 @@
     ViewBag.Title = Model.description;
 }
 
+@Html.Action("_TreeView", "DevisMinistere")
+
 <div class="super-view">
-    @Html.Action("_TreeView", "DevisMinistere")
+    
 
     <div class="info-display container-fluid">
-        <div class="info-header">
+        <header class="light-header">
+
             <h3>Énoncé de compétence</h3>
-            <div>
-                <h1>@Html.DisplayFor(model => model.codeCompetence) - @Html.DisplayFor(model => model.description)</h1>
-            </div>
-        </div>
 
-        <div class="info-detail">
+            <h1>@ViewBag.Title</h1>
 
-            @if (Model.ContexteRealisation.Count > 0)
-            {
-                <h2>Contextes de réalisations</h2>
-                <ul>
-                    @foreach (var contexteRealisation in Model.ContexteRealisation.OrderBy(m => m.numero))
-                    {
-                        <li>@Html.DisplayFor(ec => contexteRealisation.description)</li>
-                    }
-                </ul>
+        </header>
 
-                <hr />
-            }
+        @if (Model.ContexteRealisation.Count > 0)
+        {
+            <h2>Contextes de réalisations</h2>
+            <ul>
+                @foreach (var contexteRealisation in Model.ContexteRealisation.OrderBy(m => m.numero))
+                {
+                    <li>@Html.DisplayFor(m => contexteRealisation.description)</li>
+                }
+            </ul>
 
-            @if (Model.ElementCompetence.Count > 0)
-            {
+            <hr />
+        }
+
+        @if (Model.ElementCompetence.Count > 0)
+        {
                 
-                <h2>Éléments de compétence</h2>
+            <h2>Éléments de compétence</h2>
 
-                foreach (var elementCompetence in Model.ElementCompetence.OrderBy(ec => ec.numero))
-                {
-                    <a class="info-child clearfix" href='@Url.Action("Info", "ElementCompetence", new { idElement = elementCompetence.idElement })'>
-                        <p class="gauche">@Html.DisplayFor(ec => elementCompetence.description)</p>
-                        <p class="droite">@Html.DisplayFor(ec => elementCompetence.numero)</p>
-                    </a>
-                }
-
-                <hr />
+            foreach (var elementCompetence in Model.ElementCompetence.OrderBy(ec => ec.numero))
+            {
+                <a class="info-child clearfix" href='@Url.Action("Info", "ElementCompetence", new { idElement = elementCompetence.idElement })'>
+                    <p class="gauche">@Html.DisplayFor(m => elementCompetence.description)</p>
+                    <p class="droite">@Html.DisplayFor(m => elementCompetence.numero)</p>
+                </a>
             }
 
-            <h2>Options</h2>
+            <hr />
+        }
 
-            <div class="champ">
-                <a class="fancy-button" onclick="location.href='@Url.Action("Edit", new { idCompetence = Model.idCompetence })'"><span class="glyphicon glyphicon-pencil"><!----></span> Modifier</a>
-                <a class="fancy-button" onclick="location.href='@Url.Action("Create", "ElementCompetence", new { idCompetence = Model.idCompetence })'"><span class="glyphicon glyphicon-plus"><!----></span> Ajouter un élément</a>
-                <a class="fancy-button" onclick="location.href='@Url.Action("Delete", new { idCompetence = Model.idCompetence })'"><span class="glyphicon glyphicon-trash"><!----></span> Supprimer l'énoncé</a>
-                @if (Model.ElementCompetence.Count() > 1)
-                {
-                    <a class="fancy-button" onclick="location.href='@Url.Action("Order", "ElementCompetence", new { idCompetence = Model.idCompetence })'"><span class="glyphicon glyphicon-sort"><!----></span> Changer l'ordre des éléments</a>
-                }
-                <a class="fancy-button rouge" onclick="location.href='@Url.Action("Info", "DevisMinistere", new { idDevis = Model.idDevis })'">Retour</a>
-            </div>
+        <h2>Options</h2>
 
-        </div>
+        <a class="fancy-button" onclick="location.href='@Url.Action("Edit", new { idCompetence = Model.idCompetence })'"><span class="glyphicon glyphicon-pencil"><!----></span> Modifier</a>
+        <a class="fancy-button" onclick="location.href='@Url.Action("Create", "ElementCompetence", new { idCompetence = Model.idCompetence })'"><span class="glyphicon glyphicon-plus"><!----></span> Ajouter un élément</a>
+        <a class="fancy-button" onclick="location.href='@Url.Action("Delete", new { idCompetence = Model.idCompetence })'"><span class="glyphicon glyphicon-trash"><!----></span> Supprimer l'énoncé</a>
+        @if (Model.ElementCompetence.Count() > 1)
+        {
+            <a class="fancy-button" onclick="location.href='@Url.Action("Order", "ElementCompetence", new { idCompetence = Model.idCompetence })'"><span class="glyphicon glyphicon-sort"><!----></span> Changer l'ordre des éléments</a>
+        }
+        <a class="fancy-button rouge" onclick="location.href='@Url.Action("Info", "DevisMinistere", new { idDevis = Model.idDevis })'">Retour</a>
     </div>
 </div>
 
