--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/DevisMinistere/Edit.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/DevisMinistere/Edit.cshtml
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="form-box">
 
-            <header>
+            <header class="light-header">
 
                 <h1>@ViewBag.Title</h1>
 
