--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/recherche/_afficherRecherche.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/recherche/_afficherRecherche.cshtml
@@ -9,6 +9,9 @@
         font-size: 20px;
         font-family: Calibri;
     }
+    span{
+       color:darkblue;
+    }
 </style>
 
 
@@ -17,9 +20,9 @@
         <h1>Résultat</h1>
 
 
-        @if ((Model.EnonceCompetence.Count == 0) && (Model.ElementCompetence == null) && (Model.DevisMinistere.Count == 0) && (Model.CriterePerformance.Count == 0) && (Model.ContexteRealisation.Count == 0))
+        @if ((Model.EnonceCompetence.Count == 0) && (Model.ElementCompetence.Count == 0) && (Model.DevisMinistere.Count == 0) && (Model.CriterePerformance.Count == 0) && (Model.ContexteRealisation.Count == 0))
         {
-            <p color="red">Aucune information à été trouvée</p>
+            <p style="color:red;">Aucune information à été trouvée</p>
         }
         else
         {
@@ -30,8 +33,8 @@
                 foreach (SearchEnonceCompetence enonceCmpt in Model.EnonceCompetence)
                 {
                     <a class="info-child clearfix" href="@Url.Action("Info","EnonceCompetence", new { idCompetence = enonceCmpt.idCompetence })">
-                        <p>@Html.Raw(enonceCmpt.codeCompetence)</p>
-                        <p>@Html.Raw(enonceCmpt.description)</p>
+                        <p><span>Code compétence : </span>@Html.Raw(enonceCmpt.codeCompetence)</p>
+                        <p><span>Description : </span>@Html.Raw(enonceCmpt.description)</p>
                     </a>
 
                 }
@@ -45,7 +48,7 @@
                     foreach (SearchElementCompetence elementCompt in Model.ElementCompetence)
                     {
                         <a class="info-child clearfix" href="@Url.Action("Info","ElementCompetence", new { idElement = elementCompt.idElement })">
-                            <p>@Html.Raw(elementCompt.description)</p>
+                            <p><span>Description : </span>@Html.Raw(elementCompt.description)</p>
                         </a>
                     }
                 }
@@ -59,11 +62,12 @@
                     foreach (SearchDevisMinistere devis in Model.DevisMinistere)
                     {
                     <a class="info-child clearfix" href="@Url.Action("Info","DevisMinistere", new { idDevis = devis.idDevis })">
-                        <p>@Html.Raw(devis.annee)</p>
-                        <p>@Html.Raw(devis.codeSpecialisation)</p>
-                        <p>@Html.Raw(devis.specialisation)</p>
-                        <p>@Html.Raw(devis.condition)</p>
-                        <p>@Html.Raw(devis.sanction)</p>
+                        <p><span>Année : </span>@Html.Raw(devis.annee)</p>
+                        <p><span>Code de spécialisation : </span>@Html.Raw(devis.codeSpecialisation)</p>
+                        <p><span>Spécialisation : </span>@Html.Raw(devis.specialisation)</p>
+                        <p><span>Condition : </span>@Html.Raw(devis.condition)</p>
+                        <p><span>Sanction : </span>@Html.Raw(devis.sanction)</p>
+                        <p><span>Code de programme : </span>@Html.Raw(devis.codeProgramme)</p>
                     </a>
                     }
                 }
@@ -76,18 +80,32 @@
                     <h2>Contexte de réalisation</h2>
                     <hr />
 
-
-
-                        foreach (SearchContexteRealisation contexteReal in Model.ContexteRealisation)
-                        {
+                    foreach (SearchContexteRealisation contexteReal in Model.ContexteRealisation)
+                    {
 
                             <a class="info-child clearfix" href="@Url.Action("Info","EnonceCompetence", new { idCompetence = contexteReal.idCompetence})">
-                                <p>@Html.Raw(contexteReal.description)</p>
+                                <p><span>Description : </span>@Html.Raw(contexteReal.description)</p>
                             </a>
-                        }
+                    }
                 }
+            }
+            if (((IDictionary<string, object>)Model).ContainsKey("CriterePerformance"))
+            {
+                if (Model.CriterePerformance.Count != 0)
+                {
+                    <h2>Critère de performance</h2>
+                    <hr />
+                    foreach (SearchCriterePerformance critPerf in Model.CriterePerformance)
+                    {
+                        <a class="info-child clearfix" href="@Url.Action("Info","ElementCompetence", new { idElement = critPerf.idElement })">
+                            <p><span>Description : </span>@Html.Raw(critPerf.description)</p>
+                        </a>
+                    }
+                }
+            }
         }
-    }
+
+        
 
 
 
