--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Register.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Register.cshtml
@@ -56,10 +56,10 @@
                                 <hr />
 
                                 <div class="form-group">
-                                    @Html.DropDownList("roles", null, new { @class = "form-control", @onchange = "addRole()" })
+                                    @Html.DropDownList("role", null, new { @class = "form-control" })
                                 </div>
 
-                                <div id="rolesBox">
+                                <div id="roleBox">
 
                                 </div>
 
