--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Rapport/RapportProgramme.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Rapport/RapportProgramme.cshtml
@@ -2,8 +2,9 @@
 @using ApplicationPlanCadre.Models
 
 @{
-    ViewBag.Title = "RapportProgramme";
+    //ViewBag.Title = "RapportProgramme";
     Layout = null;
+    Page.Title = "Page Title";
 
 }
 
@@ -19,6 +20,7 @@
             border-collapse: collapse;
             border-spacing: 0px;
         }
+
         td{
            border-bottom:2px dashed black;
         }
