--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/PlanCadre/Create.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/PlanCadre/Create.cshtml
@@ -69,35 +69,15 @@
             <hr />
 
             <div class="form-group">
-                @Html.LabelFor(model => model.indicationPedago, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.indicationPedago, htmlAttributes: new { @class = "control-label col-md-3" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.indicationPedago, new { htmlAttributes = new { @class = "form-control small-input" } })
-                    @Html.ValidationMessageFor(model => model.indicationPedago, "", new { @class = "text-danger" })
+                    @*@Html.EditorFor(model => model.indicationPedago, new { htmlAttributes = new { @class = "form-control small-input" } })
+                    @Html.ValidationMessageFor(model => model.indicationPedago, "", new { @class = "text-danger" })*@
                 </div>
             </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.environnementPhys, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.environnementPhys, new { htmlAttributes = new { @class = "form-control small-input" } })
-                    @Html.ValidationMessageFor(model => model.environnementPhys, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.ressource, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.ressource, new { htmlAttributes = new { @class = "form-control small-input" } })
-                    @Html.ValidationMessageFor(model => model.ressource, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-
-            <div class="hero-unit">               
-               <div class="row">
+            <div class="hero-unit">
+                <div class="row">
                     <div class="btn-toolbar" data-role="editor-toolbar" data-target="#editor">
-
-
                         <div class="btn-group">
                             <a class="btn btn-primary" data-edit="bold" title="" data-original-title="Bold (Ctrl/Cmd+B)"><i class="glyphicon glyphicon-bold"></i></a>
                             <a class="btn btn-primary" data-edit="italic" title="" data-original-title="Italic (Ctrl/Cmd+I)"><i class="glyphicon glyphicon-italic"></i></a>
@@ -125,13 +105,98 @@
                             <a class="btn btn-primary" data-edit="redo" title="" data-original-title="Redo (Ctrl/Cmd+Y)"><i class="glyphicon glyphicon-menu-right"></i></a>
                         </div>
                     </div>
-                   <hr />
-                    <div id="editor" class="form-control" >
+                    <div id="editor" name="indicationPedago" class="form-control">
                         Go ahead..
                     </div>
-
                 </div>
-
+            </div>
+            <hr />
+            
+            <div class="form-group">
+                @Html.LabelFor(model => model.environnementPhys, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-10">
+                    @*@Html.EditorFor(model => model.environnementPhys, new { htmlAttributes = new { @class = "form-control small-input" } })
+                    @Html.ValidationMessageFor(model => model.environnementPhys, "", new { @class = "text-danger" })*@
+                </div>
+            </div>
+            <div class="hero-unit">
+                <div class="row">
+                    <div class="btn-toolbar" data-role="editor-toolbar" data-target="#editor">
+                        <div class="btn-group">
+                            <a class="btn btn-primary" data-edit="bold" title="" data-original-title="Bold (Ctrl/Cmd+B)"><i class="glyphicon glyphicon-bold"></i></a>
+                            <a class="btn btn-primary" data-edit="italic" title="" data-original-title="Italic (Ctrl/Cmd+I)"><i class="glyphicon glyphicon-italic"></i></a>
+                        </div>
+                        <div class="btn-group">
+                            <a class="btn btn-primary" data-edit="insertunorderedlist" title="" data-original-title="Bullet list"><i class="glyphicon glyphicon-list"></i></a>
+                            <a class="btn btn-primary" data-edit="outdent" title="" data-original-title="Reduce indent (Shift+Tab)"><i class="glyphicon glyphicon-indent-left"></i></a>
+                            <a class="btn btn-primary" data-edit="indent" title="" data-original-title="Indent (Tab)"><i class="glyphicon glyphicon-indent-right"></i></a>
+                        </div>
+                        <div class="btn-group">
+                            <a class="btn btn-primary" data-edit="justifyleft" title="" data-original-title="Align Left (Ctrl/Cmd+L)"><i class="glyphicon glyphicon-align-left"></i></a>
+                            <a class="btn btn-primary" data-edit="justifycenter" title="" data-original-title="Center (Ctrl/Cmd+E)"><i class="glyphicon glyphicon-align-center"></i></a>
+                            <a class="btn btn-primary" data-edit="justifyright" title="" data-original-title="Align Right (Ctrl/Cmd+R)"><i class="glyphicon glyphicon-align-right"></i></a>
+                            <a class="btn btn-primary" data-edit="justifyfull" title="" data-original-title="Justify (Ctrl/Cmd+J)"><i class="glyphicon glyphicon-align-justify"></i></a>
+                        </div>
+                        <div class="btn-group">
+                            <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" title="" data-original-title="Hyperlink"><i class="glyphicon glyphicon-link"></i></a>
+                            <div class="dropdown-menu input-append">
+                                <input class="span2" placeholder="URL" type="text" data-edit="createLink">
+                                <button class="btn" type="button">Add</button>
+                            </div>
+                        </div>
+                        <div class="btn-group">
+                            <a class="btn btn-primary" data-edit="undo" title="" data-original-title="Undo (Ctrl/Cmd+Z)"><i class="glyphicon glyphicon-menu-left"></i></a>
+                            <a class="btn btn-primary" data-edit="redo" title="" data-original-title="Redo (Ctrl/Cmd+Y)"><i class="glyphicon glyphicon-menu-right"></i></a>
+                        </div>
+                    </div>
+                    <div id="editor" name="environnementPhys" class="form-control">
+                        Go ahead..
+                    </div>
+                </div>
+            </div>
+            <hr />
+            
+            <div class="form-group">
+                @Html.LabelFor(model => model.ressource, htmlAttributes: new { @class = "control-label col-md-3" })
+                @*<div class="col-md-10">
+                    @Html.EditorFor(model => model.ressource, new { htmlAttributes = new { @class = "form-control small-input" } })
+                    @Html.ValidationMessageFor(model => model.ressource, "", new { @class = "text-danger" })
+                </div>*@
+            </div>
+            <div class="hero-unit">
+                <div class="row">
+                    <div class="btn-toolbar" data-role="editor-toolbar" data-target="#editor">
+                        <div class="btn-group">
+                            <a class="btn btn-primary" data-edit="bold" title="" data-original-title="Bold (Ctrl/Cmd+B)"><i class="glyphicon glyphicon-bold"></i></a>
+                            <a class="btn btn-primary" data-edit="italic" title="" data-original-title="Italic (Ctrl/Cmd+I)"><i class="glyphicon glyphicon-italic"></i></a>
+                        </div>
+                        <div class="btn-group">
+                            <a class="btn btn-primary" data-edit="insertunorderedlist" title="" data-original-title="Bullet list"><i class="glyphicon glyphicon-list"></i></a>
+                            <a class="btn btn-primary" data-edit="outdent" title="" data-original-title="Reduce indent (Shift+Tab)"><i class="glyphicon glyphicon-indent-left"></i></a>
+                            <a class="btn btn-primary" data-edit="indent" title="" data-original-title="Indent (Tab)"><i class="glyphicon glyphicon-indent-right"></i></a>
+                        </div>
+                        <div class="btn-group">
+                            <a class="btn btn-primary" data-edit="justifyleft" title="" data-original-title="Align Left (Ctrl/Cmd+L)"><i class="glyphicon glyphicon-align-left"></i></a>
+                            <a class="btn btn-primary" data-edit="justifycenter" title="" data-original-title="Center (Ctrl/Cmd+E)"><i class="glyphicon glyphicon-align-center"></i></a>
+                            <a class="btn btn-primary" data-edit="justifyright" title="" data-original-title="Align Right (Ctrl/Cmd+R)"><i class="glyphicon glyphicon-align-right"></i></a>
+                            <a class="btn btn-primary" data-edit="justifyfull" title="" data-original-title="Justify (Ctrl/Cmd+J)"><i class="glyphicon glyphicon-align-justify"></i></a>
+                        </div>
+                        <div class="btn-group">
+                            <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" title="" data-original-title="Hyperlink"><i class="glyphicon glyphicon-link"></i></a>
+                            <div class="dropdown-menu input-append">
+                                <input class="span2" placeholder="URL" type="text" data-edit="createLink">
+                                <button class="btn" type="button">Add</button>
+                            </div>
+                        </div>
+                        <div class="btn-group">
+                            <a class="btn btn-primary" data-edit="undo" title="" data-original-title="Undo (Ctrl/Cmd+Z)"><i class="glyphicon glyphicon-menu-left"></i></a>
+                            <a class="btn btn-primary" data-edit="redo" title="" data-original-title="Redo (Ctrl/Cmd+Y)"><i class="glyphicon glyphicon-menu-right"></i></a>
+                        </div>
+                    </div>
+                    <div id="editor" name="ressource" class="form-control">
+                        Go ahead..
+                    </div>
+                </div>
             </div>
 
             @*ajouter le type (contributive, spécifique, generale)*@
